# banksky

./: .flake8  .gitignore  pyproject.toml
src/: masks.py  widget.py
