[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Masta",email = "Penkovdg@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''


[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
force_single_line = true


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv/", ".venv/"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]